// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles matches Button info outline 1`] = `
.c0 {
  font-weight: 400;
  line-height: 1.5;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
  transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
  border: 1px solid #17a2b8;
  background-image: none;
  background-color: transparent;
  border-radius: 0.25rem;
  display: inline-block;
  font-size: 1rem;
  color: #17a2b8;
  padding: 0.375rem 0.75rem;
}

.c0:focus {
  outline: 0;
  box-shadow: 0 0 0 0.2rem rgba(23,162,184,0.5);
}

.c0:hover,
.c0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #17a2b8;
  background-image: none;
  background-color: transparent;
  color: #17a2b8;
  cursor: pointer;
}

.c0:hover:hover,
.c0:focus:hover {
  background-color: #17a2b8;
}

.c0:hover:hover,
.c0:focus:hover {
  color: #fff;
}

.c0:hover {
  background-color: #17a2b8;
}

.c0:hover {
  color: #fff;
}

<button
  className="c0"
/>
`;

exports[`Styles matches Button info outline disabled 1`] = `
.c0 {
  font-weight: 400;
  line-height: 1.5;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
  transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
  border: 1px solid #17a2b8;
  background-image: none;
  background-color: transparent;
  border-radius: 0.25rem;
  display: inline-block;
  opacity: 0.65;
  font-size: 1rem;
  color: #17a2b8;
  padding: 0.375rem 0.75rem;
}

.c0:focus {
  outline: 0;
  box-shadow: 0 0 0 0.2rem rgba(23,162,184,0.5);
}

.c0:hover,
.c0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #17a2b8;
  background-image: none;
  background-color: transparent;
  color: #17a2b8;
}

.c0:hover:hover,
.c0:focus:hover {
  background-color: transparent;
}

.c0:hover {
  background-color: transparent;
}

<button
  className="c0"
  disabled={true}
/>
`;
